# Yolox_Implementation

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Config.json  README.md
project/: CMakeLists.txt
project/ConfigParser/: CMakeLists.txt
project/ConfigParser/include/: Parser.h
project/ConfigParser/source/: Parser.cpp
project/Detector/: CMakeLists.txt
project/Detector/include/: Detector.h
project/Detector/source/: Detector.cpp
project/Main/: CMakeLists.txt
project/Main/source/: main.cpp
